--- a/UI project HTML CSS JS/index.html
+++ b/UI project HTML CSS JS/index.html
@@ -39,8 +39,8 @@
           <div class="intro-text">
             <h1>The Language of my soul, Poem!</h1>
             <p>
-              Each Image has A poem page, I wrote The Poems long time a go
-              but the adeas are fresh and Interesting if you like to read poem
+              Each image has a poem on it, I wrote The Poems long time a go
+              but the ideas are still fresh and interesting. If you like to read poem,
               take a look at them.
             </p>
           </div>
